# GlyphGL

./: CMakeLists.txt  README.md  glyph.h  glyph_atlas.h  glyph_effect.h
demos/: hello_world.cpp  rainbow.cpp  timer_demo.cpp
examples/: glfw_example.cpp  glut_example.cpp  winapi_example.cpp  x11_example.cpp
